eks-example-deployment

--- a/workloads/eks-example-deployment.yaml
+++ b/workloads/eks-example-deployment.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -23,7 +22,7 @@ spec:
     spec:
       containers:
       - name: eks-example
-        image: 117833228306.dkr.ecr.us-west-2.amazonaws.com/sourcerepo:b5c40916
+        image: 912455875499.dkr.ecr.us-west-2.amazonaws.com/sourcerepo:latest
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
