--- a/workloads/eks-example-deployment.yaml
+++ b/workloads/eks-example-deployment.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -23,7 +22,7 @@ spec:
     spec:
       containers:
       - name: eks-example
-        image: 934058451212.dkr.ecr.us-west-2.amazonaws.com/sourcerepo:094c8c0c
+        image: 247102726134.dkr.ecr.us-west-2.amazonaws.com/sourcerepo:latest
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 80
